# opensearch-launchpad

./: .gitignore  DESIGN.md  DEVELOPER_GUIDE.md  README.md  TEST_AGENTIC_SEARCH.md  mcp_server.py  pyproject.toml
.kiro/settings/: mcp.json
.kiro/settings/steering/: opensearch-workflow.md
kiro/opensearch-launchpad/: POWER.md  mcp.json
kiro/opensearch-launchpad/steering/: opensearch-workflow.md
kiro/opensearch-launchpad/steering/aws/: serverless-01-provision.md
kiro/opensearch-search-builder/: POWER.md
kiro/opensearch-search-builder/steering/: aws-opensearch-serverless.md
kiro/opensearch-search-builder/steering/aws/: aws-reference.md  domain-01-provision.md  domain-02-deploy-search.md  domain-03-agentic-setup.md  serverless-02-deploy-search.md
opensearch_orchestrator/: __init__.py  mcp_server.py  opensearch_ops_tools.py  opensearch_qa_assistant.py  orchestrator.py  orchestrator_engine.py  planning_session.py  solution_planning_assistant.py  tools.py  ui_server_standalone.py  worker.py
opensearch_orchestrator/knowledge/: agentic_search_guide.md
opensearch_orchestrator/scripts/: opensearch_ops_tools.py  tools.py
opensearch_orchestrator/ui/search_builder/: app.jsx  index.html
tests/: test_capability_examples_from_candidate_docs.py  test_local_path_sample_loading.py  test_local_pretrained_model_fault_tolerance.py  test_mapping_type_guardrails.py  test_mcp_advanced_tool_gate.py  test_mcp_manual_execution_flow.py  test_opensearch_docker_recovery.py  test_orchestrator_engine_workflow_it.py  test_orchestrator_index_selection.py  test_preflight_cluster_check.py  test_resource_recreate_behavior.py  test_search_ui_query_routing.py  test_shared_single_choice_input.py  test_thinking_callback_handler_streams.py  test_worker_hybrid_weight_parsing.py
