[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensearch-orchestrator"
version = "0.2.9"
description = "OpenSearch Solution Architect MCP server — guides you from requirements to a running search setup"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "opensearch", "search", "vector-search", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anyio",
    "mcp",
    "opensearch-py",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "strands-agents",
]

[project.optional-dependencies]
cli = [
    "prompt-toolkit",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/owaiskazi19/opensearch-launchpad"
Repository = "https://github.com/owaiskazi19/opensearch-launchpad"
Issues = "https://github.com/owaiskazi19/opensearch-launchpad/issues"

[project.scripts]
opensearch-orchestrator = "opensearch_orchestrator.mcp_server:main"

[tool.hatch.build]
include = [
    "opensearch_orchestrator/**/*.py",
    "opensearch_orchestrator/knowledge/*.md",
    "opensearch_orchestrator/sample_data/*",
    "opensearch_orchestrator/ui/search_builder/*",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["opensearch_orchestrator"]

[tool.hatch.build.targets.sdist]
include = [
    "opensearch_orchestrator/**/*.py",
    "opensearch_orchestrator/knowledge/*.md",
    "opensearch_orchestrator/sample_data/*",
    "opensearch_orchestrator/ui/search_builder/*",
    "tests/**/*.py",
    "README.md",
    "pyproject.toml",
]
